--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,10 +1,10 @@
 repositories {
     mavenCentral()
-    google() // Needed for androidx
+    google()
 
-    // Pedro Pathing
     maven { url = 'https://maven.brott.dev/' }
-    maven { url= 'https://maven.pedropathing.com/' }
+    maven { url= "https://maven.pedropathing.com/" }
+
 }
 
 dependencies {
@@ -16,10 +16,10 @@ dependencies {
     implementation 'org.firstinspires.ftc:Hardware:10.1.1'
     implementation 'org.firstinspires.ftc:FtcCommon:10.1.1'
     implementation 'org.firstinspires.ftc:Vision:10.1.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    // Pedro Pathing
     implementation 'com.pedropathing:pedro:1.0.6'
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
 
+    //noinspection GradleDependency
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
 }
 
